
SET( SRCFILES "cmdline.cpp" "cmdoption.cpp" )

SET( LIB_VERSION ${SO_VERSION}.${MINOR_VERSION} )

ADD_LIBRARY( ${LIBNAME} SHARED ${SRCFILES} )
SET_TARGET_PROPERTIES( ${LIBNAME} PROPERTIES VERSION ${LIB_VERSION} )
SET_TARGET_PROPERTIES( ${LIBNAME} PROPERTIES SOVERSION ${SO_VERSION} )

ADD_LIBRARY( LIB::${LIBNAME} ALIAS ${LIBNAME} )


TARGET_INCLUDE_DIRECTORIES( 
  ${LIBNAME} 
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)
