
PROJECT( CMDLINE_INSTALLER_TEST )

STRING( COMPARE EQUAL
  "${CMAKE_SOURCE_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}"
  CMDLINE_TEST_CMAKE_INSTALLER
)

IF( CMDLINE_TEST_CMAKE_INSTALLER )
  CMAKE_MINIMUM_REQUIRED( VERSION 3.12 )
  FIND_PACKAGE( CmdLine 1 COMPONENTS shared )
#  FIND_PACKAGE( CmdLine 1 REQUIRED shared )
  IF( CmdLine_FOUND )
    SET( SOURCES "main.cpp" )
    SET( TESTBIN "driver-004" )
    ADD_EXECUTABLE( ${TESTBIN} ${SOURCES} )
    TARGET_LINK_LIBRARIES( ${TESTBIN} PRIVATE CmdLine::CmdLine )
  ENDIF( CmdLine_FOUND )
ENDIF( CMDLINE_TEST_CMAKE_INSTALLER )
